# mihansolo_bot

./: .config.yml.un~  .console2RTF.ps1.un~  .gitignore  .gitmodules  .logfinder.py.un~  .~lock.improvements.ods#  8_16_2025_10_45_PM.log~  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CMakePresets.json  ILLEGAL_MOVES_WHEN.pgn  INSTALL.vcxproj  INSTALL.vcxproj.filters  ISSUES.md  NN_notes.md  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  alpha_beta_search.py  build_engine.bat  builder.bat  cmake_install.cmake  config.yml~  core.py  core2.py  engine.cpp  engine.vcxproj  engine.vcxproj.filters  engine1.bat  engine2.bat  engine_build.bat  evaluation.cpp  find.py  games.py  homemade.py  improvements.ods  issue2draft.md  issues.md  logfinder.py~  (+18 more)
.github/workflows/: cmake-single-platform.yml
include/: chess.hpp  engine.hpp  evaluation.hpp  experiments.hpp  gm2600.hpp  logging.h  polyglot.hpp  reader.hpp  timemanagement.hpp  tt.hpp  utils.hpp
issues/: TRACKER.md  issue2draft.md  issue6-draft.md  issues.md
logs/cutechess/: tournament_2025_09_19_21__16__14.pgn
mihansolo_bot/: mihansolo_bot.vtuneproj
mihansolo_bot/r000hs/: r000hs.vtune
mihansolo_bot/r000hs/config/: context_values.cfg  log.cfg  runss.options  state.cfg
mihansolo_bot/r000hs/data.0/: 93028-97740.0-93336.0.th  93028-97740.0-93336.0.th.aux  93028-97740.0-95808.0.th  93028-97740.0-97300.0.th  93028-97740.0.trace  systemcollector-91204-DESKTOP-0J9KD1D.sc
mihansolo_bot/r000hs/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
mihansolo_bot/r000hs/sqlite-db/timelinedb/: directory.xml
mihansolo_bot/r001hs/: r001hs.vtune
mihansolo_bot/r001hs/config/: log.cfg  runss.options
mihansolo_bot/r002hs/: r002hs.vtune
mihansolo_bot/r002hs/config/: context_values.cfg  log.cfg  runss.options
mihansolo_bot/r002hs/data.0/: 87880-86796.0-100048.0.th  87880-86796.0-100048.0.th.aux  87880-86796.0-88604.0.th  87880-86796.0.trace  systemcollector-94440-DESKTOP-0J9KD1D.sc
mihansolo_bot/r002hs/sqlite-db/: dicer.db
mihansolo_bot/r002hs/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
mihansolo_bot/r002hs/sqlite-db/timelinedb/: directory.xml
mihansolo_bot/r003hs/: r003hs.vtune
mihansolo_bot/r003hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
mihansolo_bot/r003hs/data.0/: 71348-88376.0-101292.0.th  71348-88376.0-92872.0.th  71348-88376.0-92872.0.th.aux  71348-88376.0.trace  systemcollector-65148-DESKTOP-0J9KD1D.sc
mihansolo_bot/r003hs/sqlite-db/: dicer.db
mihansolo_bot/r003hs/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
mihansolo_bot/r003hs/sqlite-db/timelinedb/: directory.xml
mihansolo_bot/r004tr/: r004tr.vtune
mihansolo_bot/r004tr/config/: context_values.cfg  log.cfg  runss.options
mihansolo_bot/r004tr/data.0/: 93348-92152.0-94596.0.th  93348-92152.0-94596.0.th.aux  93348-92152.0-99168.0.th  93348-92152.0-99168.0.th.aux  93348-92152.0.trace  systemcollector-86436-DESKTOP-0J9KD1D.sc
mihansolo_bot/r004tr/sqlite-db/: dicer.db
mihansolo_bot/r004tr/sqlite-db/_cache_grouper_data4_dd_thread/: container.metadata
mihansolo_bot/r004tr/sqlite-db/timelinedb/: directory.xml
mihansolo_bot/r005tr/: r005tr.vtune
mihansolo_bot/r005tr/config/: context_values.cfg  log.cfg  runss.options
mihansolo_bot/r005tr/data.0/: 10828-8080.0-13468.0.th  10828-8080.0-13468.0.th.aux  10828-8080.0-4036.0.th  10828-8080.0-4036.0.th.aux  10828-8080.0.trace  systemcollector-7256-DESKTOP-0J9KD1D.sc
mihansolo_bot/r005tr/sqlite-db/: dicer.db
mihansolo_bot/r006hs/: r006hs.vtune
mihansolo_bot/r006hs/config/: context_values.cfg  log.cfg  runss.options
mihansolo_bot/r007hs/: r007hs.vtune
mihansolo_bot/r007hs/config/: log.cfg  runss.options
mihansolo_bot/r008hs/: r008hs.vtune
mihansolo_bot/r008hs/config/: collection.cfg  log.cfg  runss.options
mihansolo_bot/r009tr/: MasterCollectionFlag.infoamplxe  r009tr.vtune
mihansolo_bot/r009tr/config/: context_values.cfg  log.cfg  runss.options  state.cfg
mihansolo_bot/r009tr/data.0/: 7896-1936.0-13596.0.th  7896-1936.0-13596.0.th.aux  7896-1936.0-2416.0.th  7896-1936.0-3152.0.th  7896-1936.0-3152.0.th.aux  7896-1936.0.trace  systemcollector-9860-DESKTOP-0J9KD1D.sc
mihansolo_bot/r010tr/: r010tr.vtune
mihansolo_bot/r010tr/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
mihansolo_bot/r010tr/data.0/: 2968-5056.0-11464.0.th  2968-5056.0-11464.0.th.aux  2968-5056.0-14188.0.th  2968-5056.0-14188.0.th.aux  2968-5056.0.trace  systemcollector-11608-DESKTOP-0J9KD1D.sc
mihansolo_bot/r010tr/sqlite-db/: dicer.db
mihansolo_bot/r011hs/: r011hs.vtune
mihansolo_bot/r011hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
mihansolo_bot/r012hs/: r012hs.vtune
mihansolo_bot/r012hs/config/: log.cfg  runss.options
mihansolo_bot/r013tr/: r013tr.vtune
mihansolo_bot/r013tr/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
mihansolo_bot/r013tr/data.0/: 7224-1900.0-15144.0.th  7224-1900.0-15144.0.th.aux  7224-1900.0-9176.0.th  7224-1900.0-9176.0.th.aux  7224-1900.0.trace  systemcollector-14400-DESKTOP-0J9KD1D.sc
mihansolo_bot/r014hs/: r014hs.vtune
mihansolo_bot/r014hs/config/: context_values.cfg  log.cfg  runss.options
mihansolo_bot/r015hs/: r015hs.vtune
mihansolo_bot/r015hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
mihansolo_bot/r016hs/: r016hs.vtune
mihansolo_bot/r016hs/config/: collection.cfg  log.cfg  runss.options
mihansolo_bot/r017hs/: r017hs.vtune
mihansolo_bot/r017hs/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
misc/: cutechess_cmd.sh  find.py  games.py  linux-bot.sh  reconstruct.py  windows-bot.ps1  windows-cutechess.ps1  windows_cmd_cutechess.bat
src/: .engine.cpp.un~  TRACKER.md  engine.cpp  evaluation.cpp  experiments.cpp  main.cpp  polyglot.cpp  timemanagement.cpp  tt.cpp  utils.cpp
test_bot/: conftest.py  homemade.py  lichess.py  test_bot.py  test_external_moves.py  test_lichess.py  test_model.py  test_timer.py
tests/: engine_tests.cc  evaluation_tests.cc
(+70 files in other folders)
